--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "history": "^5.3.0",
     "little-state-machine": "^4.2.3",
     "node-sass": "^7.0.1",
@@ -19,6 +21,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-step-builder": "^3.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -31,6 +34,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:9000/api",
   "browserslist": {
     "production": [
       ">0.2%",
