--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:9000",
+  "proxy": "http://localhost:9000/api",
   "browserslist": {
     "production": [
       ">0.2%",
